Previous commit which fixed white cards layout broke white backgorund for articles.  This fixes it by using both class selectors

--- a/sites/all/themes/magazeen_lite/scss/main.scss
+++ b/sites/all/themes/magazeen_lite/scss/main.scss
@@ -31,7 +31,7 @@ ul.pager {
   margin:0 0 25px 0;
 }
 
-.search-result {
+.node-box, .search-result {
   background: #fdfefe url(images/node-box-top.gif) repeat-x top center;
   border: 1px solid #dce7ed;
   border-bottom: 1px solid #cfdbe1; border-top:0;
